kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapi
  labels:
    app.kubernetes.io/name: helloapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: helloapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helloapi
    spec:
      containers:
      - name: helloapi
        image: scarifcitadel/helloapi:v0.1.0
        ports:
        - containerPort: 8080
