kustomize/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapi-svc
  labels:
    app.kubernetes.io/name: helloapi
spec:
  selector:
    app.kubernetes.io/name: helloapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
