kustomize/base/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloapi-gw
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
