kustomize/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapi-ing
  labels:
    app.kubernetes.io/name: helloapi
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapi-svc
            port:
              number: 80
