kustomize/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloapi-vs
spec:
  hosts:
  - "*"
  gateways:
  - helloapi-gw
  http:
  - match:
    - uri:
        prefix: /helloapi
    route:
    - destination:
        host: helloapi.dev.svc.cluster.local
        port:
          number: 80
